# SekaiMagic

./: .gitignore  LICENSE.md  README.md  build.gradle.kts  local.properties  settings.gradle.kts
InputDaemon/: local.properties  settings.gradle.kts
InputDaemon/app/: build.gradle.kts
InputDaemon/app/src/main/: AndroidManifest.xml
InputDaemon/app/src/main/cpp/: CMakeLists.txt  uinput_touch.c
InputDaemon/app/src/main/res/values/: strings.xml  themes.xml
InputDaemon/app/src/main/res/values-night/: themes.xml
InputDaemon/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
src/main/java/moe/ku6/sekaimagic/: SekaiMagic.java
src/main/java/moe/ku6/sekaimagic/adb/: ABSKeyCode.java  ADBConnector.java  ADBManager.java  TouchEventBuilder.java
src/main/java/moe/ku6/sekaimagic/chart/: SheetLocation.java
src/main/java/moe/ku6/sekaimagic/command/: CommandManager.java  ICommand.java
src/main/java/moe/ku6/sekaimagic/config/: CommandLineConfig.java
src/main/java/moe/ku6/sekaimagic/console/: InteractiveConsole.java
src/main/java/moe/ku6/sekaimagic/data/: SekaiDataManager.java  SekaiDatabase.java
src/main/java/moe/ku6/sekaimagic/input/: ABSKeyCode.java  DaemonWebsocketClient.java  GuideSoundPlayer.java  IInputDevice.java  InputDaemon.java  InputManager.java  TouchEventBuilder.java
src/main/java/moe/ku6/sekaimagic/music/: MusicPackage.java  Package.java  Track.java  TrackDifficulty.java
src/main/java/moe/ku6/sekaimagic/util/: CUID.java  (+10 more)
src/main/resources/config/: .sekairc.json
src/main/resources/static/: legal_notice.txt
(+53 files in other folders)
